[gd_scene load_steps=4 format=3 uid="uid://rh3dw1cljnux"]

[ext_resource type="Texture2D" uid="uid://ckect222m1bin" path="res://assets/sprites/warning.png" id="1_6jepl"]
[ext_resource type="Script" path="res://scenes/team_size_ui/team_size_ui.gd" id="1_kpitj"]

[sub_resource type="LabelSettings" id="LabelSettings_bijuo"]
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.705882)

[node name="TeamSizeUI" type="PanelContainer"]
offset_right = 46.0
offset_bottom = 24.0
script = ExtResource("1_kpitj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="UnitCounter" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "10/10"
label_settings = SubResource("LabelSettings_bijuo")
horizontal_alignment = 1

[node name="TooManyUnitsIcon" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
texture = ExtResource("1_6jepl")
stretch_mode = 5
